add html structure for transition

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="./main.css" />
     <title>Transitions</title>
   </head>
-  <body></body>
+  <body>
+    <a class="btn" href="#">Hover ME</a>
+  </body>
 </html>
