add setup for transform

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Transitions</title>
   </head>
   <body>
-    <a class="btn" href="#">Hover ME</a>
+    <div class="box"></div>
   </body>
 </html>
