--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Transitions</title>
   </head>
   <body>
-    <h1>transform</h1>
-    <div class="box"></div>
+    <button class="btn">click me</button>
+    <button class="btn">click me</button>
   </body>
 </html>
