--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Transitions</title>
   </head>
   <body>
-    <button class="btn">click me</button>
-    <button class="btn">click me</button>
+    <button class="btn btn1">click me</button>
+    <button class="btn btn2">click me</button>
   </body>
 </html>
